# c_language_systematic_explanation

./: CMakeLists.txt  README.md  test.txt
chapter_02/: 02_condition.c  02_constant.c  02_data_type_char.c  02_data_type_float.c  02_data_type_int.c  02_guess_number.c  02_loop.c  02_operators.c  02_variable.c
chapter_03/: 03_function_basics.c  03_hanoi.c  03_proto_type.c  03_recursion.c  03_varargs.c  03_variable_types_and_scope.c
chapter_04/: 04_conditional_macro.c  04_file_include.c  04_macro_function.c  04_my_include.c  04_printflnf.c
chapter_05/: 05_2d_array.c  05_array_basics.c  05_array_limits.c  05_array_parameter.c  05_quick_sort.c  05_shuffle_array.c  05_string.c
chapter_06/: 06_dynamic_memory.c  06_function_pointer.c  06_lvalue_rvalue.c  06_pointer_basics.c  06_pointer_operations.c  06_pointer_parameter_as_return_value.c  06_pointer_values.c  06_quick_sort.c  06_readonly_pointer.c  06_swap_values.c
chapter_07/: 07_byrte_order.c  07_enum.c  07_link.c  07_struct.c  07_struct_align.c  07_test.c  07_union.c
chapter_08/: 08_character_type.c  08_conversion.c  08_mbs_wcs.c  08_mem_op.c  08_restrict.c  08_safe_version.c  08_string_concat_copy.c  08_string_length_compare.c  08_string_tokenize.c  08_vcruntime_string.c
chapter_09/: 09_calendar.c  09_format_time.c  09_get_sys_time.c  09_parse_time.c  09_time.c  09_time_diff.c
chapter_10/: 10_copy_file.c  10_copy_file_2.c  10_copy_file_3.c  10_count_characters.c  10_file_buffer.c  10_format_input_output.c  10_io_basic.c  10_other_operation.c  10_position.c  10_read_char.c  10_read_write_a_line.c  (+3 more)
(+22 files in other folders)
